# Cropfresh_Ai

./: .codex_benchmark_live_smoke.txt  .codex_mypy_full.txt  .codex_pytest_full.txt  .codex_ruff_full.txt  .dockerignore  .env.example  .gitignore  AGENTS.md  Advanced Pricing Agent Implementation Plan  Agmarknet Complete Extraction Plan  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Daily Rate Data Sources for Karnataka  Platforms, Coverage, and Integration Options.md  Makefile  Modular_Coding.rules  PLAN.md  Price Intelligence Pipeline Walkthrough.md  README.md  ROADMAP.md  SYSTEM_DESIGN_2026_03_04.md  WORKFLOW_STATUS.md  adcl_research_report.md.resolved  advanced_cv_implementation.md.resolved  agmarknet_filters.json  agmarknet_taxonomy.json  ai_assistant_rules.yaml  cv_grading_analysis.md.resolved  docker-compose.yml  emb_results.txt  export_yolo.py  implementation_plan.md.resolved  orch_results.txt  pdf_content.txt  pyproject.toml  results.txt  system_design.md.resolved  temp_agmark_results.txt  test_scrapling.py
.agent/rules/: cropfresh-docs-and-artifacts.md  safety-and-integrity.md
.agent/workflows/: agent-design-doc.md  implement-feature-with-docs.md  setup-and-run.md  update-docs.md  workflow-doc-from-json.md
.antigravity/: rules.md  settings.json  tasks.json
.antigravity/profiles/: fast.json  planning.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-improvement.md  bug-report.md  feature-request.md
.github/workflows/: ci.yml  deploy-aws.yml  deploy-prod.yml  deploy-staging.yml  eval-agents.yml  scraper-cron.yml
TESTING/: CHECKLISTS.md  STRATEGY.md
ai/data/: README.md
ai/evals/: __init__.py  eval_config.yaml  run_evals.py  run_voice_benchmark.py
ai/models/: model_registry.yaml
ai/rag/: __init__.py  advanced_reranker.py  agentic_orchestrator.py  agri_embeddings.py  browser_rag.py  chunker.py  citation_engine.py  confidence_gate.py  enhanced_retriever.py  evaluation.py  export_map.py  grader.py  graph_constructor.py  graph_retriever.py  graph_store.py  hybrid_search.py  knowledge_base.py  knowledge_injection.py  observability.py  query_analyzer.py  query_processor.py  query_rewriter.py  query_rewriter_prompts.py  raptor.py  reranker.py  retriever.py
config/: antigravity-docs.yaml  project-context.yaml
config/firebase/: firebase.json  storage.rules
config/n8n/: credentials.json.example
config/neo4j/: constraints.cypher  seed.cypher
config/qdrant/: collections.yaml  indexes.yaml
config/supabase/: seed.sql
docs/: Businessplan.md  README.md  agents-index.yaml  rag_architecture.md
docs/agents/: REGISTRY.md  tool-catalog.md  (+3 more)
mobile/: README.md
models/: .gitkeep
notebooks/: CropFresh_Agentic_RAG.ipynb
scripts/: backup-qdrant.sh  cost-report.py  debug_playwright.py  download_vision_models.py  dump_dom.py  dump_react_table.py  eval_guardrail.py  export-agent-logs.py  export_quality_dataset.py  extract_taxonomy.py  find_api.py  find_api_in_js.py  generate-daily-log.py  intercept_api.py  package_for_colab.py  parse_dom.py  populate_qdrant.py  quick_test.py  quick_voice_test.py  run-all-evals.sh  seed-database.py  seed_graph.py  setup-dev.sh  setup_local_db.sql  sync-plan.py  test_adaptive_router.py  test_advanced_reranker.py  test_advanced_retrieval.py  test_agentic_rag.py  test_agmarknet.py  test_agmarknet_api.py  test_agmarknet_live.py  test_agri_embeddings.py  test_crawl4ai.py  test_deep_research.py  test_direct_api.py  test_evaluation_pipeline.py  test_graph_rag.py  test_kb_search.py  test_knowledge_injection.py  (+22 more)
src/: __init__.py  config.py
static/: index.html  premium_voice.html  rag_test.html  vision_lab.html  voice_agent.html  voice_realtime.html  voice_test_ui.html
tests/: conftest.py
tracking/: COST.md  GOALS.md  OUTCOMES.md  PROJECT_STATUS.md  README.md  WORKFLOW_STATUS.md
(+1161 files in other folders)
